@@ -2,6 +2,7 @@ use strict;
 use warnings;
 
 use Test::More;
+use Test::Warnings qw(:all);
 
 use Ryu::Observable;
 
@@ -24,6 +25,17 @@ subtest 'subscription' => sub {
     ok($called, 'callback was triggered');
     $v->set($expected = 65);
     is($called, 2, 'callback was triggered again');
+    done_testing;
+};
+subtest 'boolean comparison - numeric' => sub {
+    ok(!!Ryu::Observable->new(123), 'true numeric boolean');
+    ok(!Ryu::Observable->new(0), 'true numeric boolean');
+    done_testing;
+};
+subtest 'boolean comparison - string' => sub {
+    ok(!!Ryu::Observable->new("example"), 'true string boolean');
+    ok(!Ryu::Observable->new(""), 'false string boolean');
+    ok(!Ryu::Observable->new(undef), 'false string boolean');
     done_testing;
 };
 
